The JS is now working for base case Scenarios it doesn't accomodate special cases but we will work on that

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
         <div class="content">
             <button class="btn-content alt">AC</button>
             <button class="btn-content alt">Del</button>
-            <button class="btn-content opr">%</button>
+            <button class="btn-content per">%</button>
             <button class="btn-content opr">&divide;</button>
-            <button class="btn-content num">7</button>
+            <button class="btn-content num seven">7</button>
             <button class="btn-content num">8</button>
             <button class="btn-content num">9</button>
             <button class="btn-content opr">&times;</button>
@@ -30,7 +30,7 @@
             <button class="btn-content opr">X<sup>n</sup></button>
             <button class="btn-content num">0</button>
             <button class="btn-content num">.</button>
-            <button class="btn-content opr equals">=</button>
+            <button class="btn-content equals">=</button>
         </div>
     </div>
 </body>
