--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="display"></section>
         <div class="content">
             <button class="btn-content alt">AC</button>
-            <button class="btn-content alt">Del</button>
+            <button class="btn-content del">Del</button>
             <button class="btn-content per">%</button>
             <button class="btn-content opr">&divide;</button>
             <button class="btn-content num seven">7</button>
