Final adjustments - made sure everything works smoothly - added a link to my repo - add functionality to the Del button(I have completely forgot it I just added   for the delete key in the keyboard not the Del button on the screen

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <button class="btn-content num">.</button>
             <button class="btn-content equals">=</button>
         </div>
+        <p>If you like it give me a star in github🥺</p>
+        <a href="https://github.com/etcoder-642/calculator">Here's My Repo</a>
     </div>
 </body>
 </html>
